# django-quiz

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  pytest.ini  requirements.txt  setup.cfg  test.csv  test2.csv
Example CSV Files/: Toaster.csv  WaveEnergyConverter.csv
Example CSV Files/Templates/: 1Category_4Question.csv  1Category_4Question_VaryAnswer.csv  2Category_2Question.csv  2Category_2Question_VaryAnswer.csv
ExampleProject/: settings.py  urls.py
quizzes/: admin.py  models.py  tests.py  urls.py  views.py
quizzes/migrations/: 0001_initial.py  0002_quiz_active_quiz.py  0003_auto_20200525_1542.py  0003_auto_20200826_1516.py  0004_auto_20200525_1544.py  0005_auto_20200525_1555.py  0006_auto_20200527_1758.py  0007_auto_20200612_0145.py
quizzes/templates/quizzes/: category_detail.html  feedback.html  feedbackold.html  get_feedback_pdf.html  index.html  question_detail.html  quiz_detail.html  quiz_upload.html  scratch.html  take_quiz.html
